# my_data_science_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: README.md
data/processed/: people_clean.csv
data/raw/: people.csv
notebooks/: bootstrap.py  bootstrap_cell.py  clustering.ipynb  eda.ipynb  ml_model.ipynb  preprocessing_example.ipynb  regression.ipynb
src/: README.md  data_loader.py  frequency_table.py  main.py  preprocessing.py
src/my_data_science_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: notebook_setup.py
tests/: test_main.py
