[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_data_science_project"
version = "0.1.0"
description = "A starter data science project with notebooks and tests"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "jupyter",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["src"]
