[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-data-science-project"
version = "0.1.0"
description = "Data science project template with src-layout, notebooks, tests, and VS Code config"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Jeffrey Chapple", email="jeffreytchapple@gmail.com"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
